--- a/GameLibrary/Pages/Games/Edit.cshtml
+++ b/GameLibrary/Pages/Games/Edit.cshtml
@@ -2,67 +2,96 @@
 @model GameLibrary.Pages.Games.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+	ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"]</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+	<style>
+		body {
+			background-color: #000235;
+			color: #FFD43B;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<h1>Edit Game</h1>
+	</header>
 
-<h4>Game</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Game!.Id" />
-            <div class="form-group">
-                <label asp-for="Game!.Title" class="control-label"></label>
-                <input asp-for="Game!.Title" class="form-control" />
-                <span asp-validation-for="Game!.Title" class="text-danger"></span>
-            </div>
-			<div class="form-group">
-				<label asp-for="Game.ImageUrl" class="control-label">Image</label>
-				<img src="@Model.Game.ImageUrl" class="img-thumbnail" title="Game Image" />
-				<span asp-validation-for="ImageFile" class="text-danger"></span>
+		<div class="row">
+			<div class="col-md-4">
+				<form method="post" enctype="multipart/form-data">
+					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+					<input type="hidden" asp-for="Game!.Id" />
+					<div class="form-group">
+						<label asp-for="Game!.Title" class="control-label">Title</label>
+						<input asp-for="Game!.Title" class="form-control" />
+						<span asp-validation-for="Game!.Title" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="ImageFile" class="control-label">New Image</label>
+						<input type="file" asp-for="ImageFile" class="form-control" onchange="previewImage(event)" />
+						<span asp-validation-for="ImageFile" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.Genre" class="control-label">Genre</label>
+						<input asp-for="Game!.Genre" class="form-control" />
+						<span asp-validation-for="Game!.Genre" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.ReleaseDate" class="control-label">Release Date</label>
+						<input asp-for="Game!.ReleaseDate" class="form-control" />
+						<span asp-validation-for="Game!.ReleaseDate" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Game!.Description" class="control-label">Description</label>
+						<input asp-for="Game!.Description" class="form-control" />
+						<span asp-validation-for="Game!.Description" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<input type="submit" value="Save" class="btn btn-primary" style="background-color: #420599; color: #FFD43B;" />
+						<a asp-page="./Index" class="btn" style="background-color: #420599; color: #FFD43B;">Back to List</a>
+					</div>
+				</form>
 			</div>
-			<div class="form-group">
-				<label asp-for="ImageFile" class="control-label">New Image</label>
-				<img id="imagePreview" src="ImageFile" class="img-thumbnail" title="Game Image" />
-				<input type="file" asp-for="ImageFile" class="form-control" onchange="previewImage(event)" />
-				<span asp-validation-for="ImageFile" class="text-danger"></span>
+			<div class="col-md-4">
+				<div class="form-group text-center">
+					<label asp-for="Game!.ImageUrl" class="control-label">Current Image</label><br />
+					<img src="@Model.Game!.ImageUrl" class="img-thumbnail" title="Game Image" />
+					<span asp-validation-for="Game!.ImageUrl" class="text-danger"></span>
+				</div>
 			</div>
-			<script type="text/javascript">
-				function previewImage(event) {
-				var reader = new FileReader();
-				reader.onload = function(){
+			<div class="col-md-4">
+			<div class="form-group text-center">
+					<label asp-for="ImageFile" class="control-label">New Image</label><br />
+					<img id="imagePreview" src="#" class="img-thumbnail" style="display:none;" />
+					<span asp-validation-for="ImageFile" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+
+	<footer class="text-center text-lg-start position-absolute bottom-0 w-100">
+		<div class="container text-center p-3">
+			© 2024 Web-Tech Group 17 | This site uses cookies to enhance your experience. <a asp-area="" asp-page="/Privacy" class="text-white">Learn more</a>
+		</div>
+	</footer>
+
+	<script type="text/javascript">
+		function previewImage(event) {
+			var reader = new FileReader();
+			reader.onload = function(){
 				var output = document.getElementById('imagePreview');
 				output.src = reader.result;
-				};
-				reader.readAsDataURL(event.target.files[0]);
-				}
-			</script>
-
-            <div class="form-group">
-                <label asp-for="Game!.Genre" class="control-label"></label>
-                <input asp-for="Game!.Genre" class="form-control" />
-                <span asp-validation-for="Game!.Genre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-				<label asp-for="Game!.ReleaseDate" class="control-label">Release Date</label>
-                <input asp-for="Game!.ReleaseDate" class="form-control" />
-                <span asp-validation-for="Game!.ReleaseDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game!.Description" class="control-label"></label>
-                <input asp-for="Game!.Description" class="form-control" />
-                <span asp-validation-for="Game!.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+				output.style.display = 'block';
+			};
+			reader.readAsDataURL(event.target.files[0]);
+		}
+	</script>
+</body>
+</html>
