--- a/GameLibrary/wwwroot/css/site.css
+++ b/GameLibrary/wwwroot/css/site.css
@@ -7,11 +7,6 @@ body {
     padding: 0;
 }
 
-h1 {
-    color: #FFD43B;
-    margin-top: 20px;
-}
-
 .navbar {
     background-color: transparent;
 }
@@ -24,41 +19,71 @@ h1 {
         color: #FFA500;
     }
 
-.btn {
-    background-color: #420599;
-    color: #FFD43B;
-}
-
-    .btn:hover {
-        background-color: #5935c4;
-    }
-
-.container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-/* Hero Section */
-.hero-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+/* Animation keyframes */
+.animation {
     position: relative;
-    height: 100vh;
-    background: url('/images/Gamer.webp') no-repeat center center;
-    background-size: cover;
     overflow: hidden;
 }
 
+.spaceship {
+    height: 6.25rem;
+    position: absolute;
+    top: 50%;
+    left: -5%;
+    z-index: 2;
+}
+
+.spaceship1 {
+    height: 6.25rem;
+    position: absolute;
+    top: 50%;
+    left: 97%;
+    z-index: 2;
+}
+
+/* Hero Section */
+
+.hero-title, .hero-subtitle, .hero-description, .hero-buttons {
+    opacity: 0;
+}
+
+.hero-section {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    color: white;
+    text-align: center;
+    border-radius: 0.25rem;
+}
+
+@media (max-width: 600px) {
+    .hero-section {
+        flex-direction: column;
+        height: auto;
+        padding: 1rem;
+    }
+}
+
+.hero-image {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    bottom: 0;
+}
+
+/* Hero overlay with gradient background */
 .hero-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.4) 50%, rgba(0, 0, 0, 0.9) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.4) 50%, rgba(0, 0, 0, 0.7) 100%);
 }
 
 .hero-text {
@@ -66,126 +91,162 @@ h1 {
     z-index: 2;
     text-align: center;
     color: white;
+    padding-left: 1rem;
+    padding-right: 1rem;
     animation: fadeIn 1.5s ease-in-out;
 }
 
     .hero-text h1 {
-        font-size: 4em;
+        color: #FFD43B;
+        margin-top: 3rem;
+        font-size: 4rem;
         font-weight: bold;
         text-transform: uppercase;
+        line-height: 1.2;
     }
+
+        .hero-text h1:hover {
+            color: #FFD43B;
+            text-shadow: 7px 10px 15px blueviolet;
+        }
 
     .hero-text h2 {
-        margin-top: 0.5em;
-        font-size: 1.8em;
+        margin-top: 1rem;
+        font-size: 2.6rem;
     }
 
+    .hero-text p {
+        margin-top: 2rem;
+        font-size: 1.25rem;
+        font-weight: 300;
+    }
+
+    .hero-text div {
+        margin-top: 0.5rem;
+        margin-bottom: 3rem;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        position: relative;
+        flex: 1 1 100%;
+        flex-wrap: wrap;
+    }
+
+@media (min-width: 600px) {
+    .hero-text div {
+        flex: 1;
+    }
+}
+
 .cta-button, .login-button {
-    margin-top: 20px;
-    font-size: 1.2em;
-    display: inline-block;
-    padding: 15px 30px;
+    display: block;
+    font-weight: 300;
+    text-decoration: none;
+    text-align: center;
     text-transform: uppercase;
-    color: #FBFF00;
-    border: 2px solid #FBFF00;
-    text-shadow: 0 0 0.125em #FBFF00, 0 0 0.45em currentColor;
-    border-radius: 35px;
-    transition: background-color 0.3s, border-color 0.3s;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    background-color: #420599;
+    color: #FFD43B;
+    border-color: #007bff;
+    font-size: 1.25rem;
+    padding: 0.3rem 1rem;
+    margin: 0.25rem;
+    border-radius: 50rem !important;
 }
 
     .cta-button:hover, .login-button:hover {
-        background-color: #FF8C00;
-        color: white;
-        border-color: #FF8C00;
+        background-color: #5935c4;
     }
+
 
 .scroll-indicator {
     position: absolute;
-    bottom: 10%;
+    bottom: 0%;
+    font-size: 1.1rem;
+    margin-bottom: 0;
+    z-index: 2;
+    color: white;
     animation: bounce 2s infinite;
 }
 
-.scroll-arrow i {
-    font-size: 2em;
-    color: white;
-}
+    .scroll-indicator img {
+        height: 2rem;
+    }
+
 
 /* About Section */
 .about-section {
-    margin-top: 50px;
-    padding: 50px 20px;
-    background: #202c42;
-    color: white;
-    border-radius: 10px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    margin-top: 3.125rem;
+    padding: 3.125rem 1.25rem;
+    background: #031633;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    color: #f8f9fa;
+    border-radius: 1rem;
+    box-shadow: 0px -2px 15px #FFA500;
 }
 
-    .about-section h2 {
-        font-size: 2.5em;
-        color: #FFD700;
-        margin-bottom: 20px;
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1140px;
+    text-align: center;
+}
+
+.about-section h2 {
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    font-size: 2.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    color: #FFD700;
+}
+
+.about-section p {
+    font-size: 1rem;
+    font-weight: normal;
+    margin-bottom: 3rem;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+@media (min-width: 600px) {
+    .row {
+        display: grid;
+        grid-template-columns: 1fr;
     }
+}
+
+@media (min-width: 700px) {
+    .row {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+.row div {
+    display: grid;
+    grid-template-rows: repeat(auto-fit);
+}
 
 .feature-card {
     background: #000235;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 1.5rem;
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
+    border-radius: 0.625rem;
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
+    border-radius: 1rem;
 }
-
-    .feature-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    .feature-card i {
-        font-size: 2.5em;
-        color: #FFD700;
-        margin-bottom: 10px;
-    }
 
     .feature-card h5 {
-        color: white;
+        font-weight: 900;
+        color: blueviolet;
     }
-
-/* Footer */
-.footer {
-    margin-top: auto;
-    padding: 20px 0;
-    text-align: center;
-    border-top: 1px solid #333;
-    background-color: #000235;
-    color: white;
-}
-
-    .footer a {
-        color: #FFD700;
-    }
-
-        .footer a:hover {
-            color: #FFA500;
-        }
-
-/* Keyframes for animations */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes bounce {
-    0%, 100% {
-        transform: translateY(0);
-    }
-
-    50% {
-        transform: translateY(-10px);
-    }
-}
